# Analysis-Tool-for-Undergrad-Students

./: .coverage  .coveragerc  .firebaserc  .flake8  .gitignore  .pre-commit-config.yaml  CNAME  Dados 2.txt  Data.txt  Dockerfile  LICENSE  MANIFEST.in  MainWindow.py  README.md  _config.yml  about.md  createInstaller.iss  credentials.json  dados 2.txt  dados.txt  dale.txt  googlelicense.html  index.css  index.html  index.md  instruction_new_version.txt  licença.md  linux.md  macos.md  main.py  main.pyproject  main.spec  package-lock.json  package.json  pyproject.toml  pytest.ini  req_development.txt  requeriments.txt  requirements.txt  setup.py  (+7 more)
.firebase/: hosting.ZGlzdA.cache  hosting.cHVibGlj.cache
_posts/: 2021-05-14-ajuste-de-funcao.md  2021-05-14-customizacao.md  2021-05-14-importacao-de-dados.md  2021-05-14-instalacao-windows.md  2021-05-14-multiplos-ajustes.md
atus/: __main__.py  main.py
atus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pages/: contato.html  home.html  licenca.html  tutoriais.html  windows.html
posts/: macos.html  windows.html
public/: index.html
qml/: colors.js  main.qml  main_mac.qml  main_windows.qml
source/: Converter.bat  MainWindow.py  MainWindow.ui  MainWindow2.py  Model.py  Panels.py  PltWidget.py  SideMenu.py  mplwidget.py  ui_functions.py
src/: App.vue  Calculators.py  GlobalManager.py  GoogleDriveAPI.py  Histogram.py  MainWindow.py  MatPlotLib.py  MessageHandler.py  Model.py  Model_multiplot.py  MultiPlot.py  Panels.py  Plot.py  PltWidget.py  ProjectManager.py  UpdateChecker.py  (+4 more)
(+120 files in other folders)
